manifests/apps/actual/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actual
  template:
    metadata:
      labels:
        app: actual
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: actual
          image: docker.io/actualbudget/actual-server:edge@sha256:f7abbb7ac165f949729a099c82b3ae8fcdfec714f4a1d9cddb523435a073e82d
          ports:
            - containerPort: 5006
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: actual-data
              mountPath: /data
          livenessProbe:
            exec:
              command:
                - node
                - src/scripts/health-check.js
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
      volumes:
        - name: actual-data
          persistentVolumeClaim:
            claimName: actual-config
