manifests/apps/actual/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: actual
  namespace: apps
spec:
  serviceName: actual
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: actual
  template:
    metadata:
      labels:
        app: actual
    spec:
      enableServiceLinks: false # https://github.com/actualbudget/actual/issues/4920#issuecomment-2858039347
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      restartPolicy: Always
      containers:
        - name: actual
          image: docker.io/actualbudget/actual-server:latest-alpine@sha256:136b1aa9c3070583cb5493cba370c36290b7d2505c0222bf38a4b097fcac6a40
          ports:
            - containerPort: 5006
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: actual-data
              mountPath: /data
          livenessProbe:
            exec:
              command:
                - node
                - src/scripts/health-check.js
          readinessProbe:
            exec:
              command:
                - node
                - src/scripts/health-check.js
        - name: sync
          image: docker.io/seriouslag/actual-auto-sync:latest@sha256:e37c27f70ee1a09f4925eb83ce5f4765a24d820a63286115eb78a64cd63875ef
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            exec:
              command:
                - node
                - -e
                - process.exit(0)
            initialDelaySeconds: 30
            periodSeconds: 60
          readinessProbe:
            exec:
              command:
                - node
                - -e
                - process.exit(0)
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: sync-data
              mountPath: /data
      volumes:
        - name: sync-data
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: actual-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
