manifests/apps/actual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual
  namespace: apps
spec:
  selector:
    app: actual
  ports:
    - name: http
      port: 5006
      targetPort: 5006
