manifests/apps/actual/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: actual.cluster.nelsondane.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: actual-svc
              port:
                number: 5006
